--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-10 col-md-offset-1">
             <div class="pannel-group">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
@@ -28,10 +28,10 @@
                     </div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <h5>Categories:</h5>
                             </div>
-                            <div class="col-md-9">
+                            <div class="col-md-1">
                                 <ul>
                                     <li th:remove="all"></li>
                                     <li th:remove="all">cat two</li>
@@ -41,13 +41,13 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <h5>Prep Time:</h5>
                             </div>
                             <div class="col-md-3">
                                 <p th:text="${(recipe.prepTime)} + ' mins'">30 min</p>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <h5>Difficulty:</h5>
                             </div>
                             <div class="col-md-3">
@@ -55,27 +55,27 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <h5>Cooktime:</h5>
                             </div>
                             <div class="col-md-3">
-                                <p th:text="${recipe.cookTime}">30 min</p>
+                                <p th:text="${recipe.cookTime} + ' mins'">30 min</p>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <h5>Servings:</h5>
                             </div>
                             <div class="col-md-3">
-                                <p th:text="${recipe.servings} + ' Peoples'">4</p>
+                                <p th:text="${recipe.servings} + ' People'">4</p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <h5>Source:</h5>
                             </div>
                             <div class="col-md-3">
                                 <p th:text="${recipe.source}">30 min</p>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <h5>URL:</h5>
                             </div>
                             <div class="col-md-3">
@@ -94,7 +94,8 @@
                                 <ul>
                                     <li th:remove="all">1 Cup of milk</li>
                                     <li th:remove="all">1 Teaspoon of chocolate</li>
-                                    <li th:each="ingredient:${recipe.ingredients}" th:text="${ingredient.getAmount() +
+                                    <li th:each="ingredient:${recipe.ingredients}"
+                                        th:text="${ingredient.getAmount() +
                                      '  '  + ingredient.uom.getDescription() +
                                       ',  '  + ingredient.getDescription()}">1 Teaspoon of Sugar</li>
                                 </ul>
